--- a/welcome.css
+++ b/welcome.css
@@ -194,6 +194,10 @@ h4 {
     pointer-events: none;
 }
 
+h4[data-visited]::after {
+    content: " ✔";
+}
+
 h5 {
     font-size: 14pt;
     font-weight: bold;
