--- a/taskbar.css
+++ b/taskbar.css
@@ -9,6 +9,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 9pt;
+    ;
 }
 
 .taskbar button,
@@ -21,10 +23,14 @@
     top: 1px;
     left: 2px;
     font-weight: bold;
-    font-size: 8pt;
     vertical-align: middle;
     padding-left: 4px;
     padding-right: 4px;
+}
+
+.taskbar button .label {
+    position: relative;
+    top: -1px;
 }
 
 .taskbar button img {
@@ -34,4 +40,21 @@
     max-height: 16px;
     position: relative;
     top: 3px;
+}
+
+.tray {
+    color: #222222;
+    box-shadow: inset 1px 1px #808080, inset -1px -1px white;
+    margin-right: 2px;
+    margin-top: 4px;
+    margin-bottom: 3px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 2px 9px 2px 9px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    line-height: 16px;
 }
